fix date and time display on transactions, changed datejumper position and size

--- a/src/sass/inputs.scss
+++ b/src/sass/inputs.scss
@@ -7,8 +7,8 @@ input.datepicker {
 }
 .calendar {
   width: 100% !important;
-  left: 0% !important;
-  top: 2em;
+  margin-top: -1rem;
+  margin-bottom: 1.5rem;
   border: 0;
   border-radius: 5px;
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
